# ai-trader-botv2

./: .gitignore  README.MD  docker-compose.yml
.github/workflows/: deploy.yml
UnitTest/: README.md  UnitTest.sln
UnitTest/backend-net.Tests/: AnalisaServiceTests.cs  AppDbContextTests.cs  SahamControllerTests.cs  backend-net.Tests.csproj
UnitTest/python-worker-tests/: pyproject.toml
UnitTest/python-worker-tests/ai_trader_bot_worker_tests.egg-info/: PKG-INFO  SOURCES.txt
UnitTest/python-worker-tests/tests/: test_smoke.py
backend-net/: .dockerignore  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json  backend-net.csproj  backend-net.http
backend-net/Controllers/: SahamController.cs
backend-net/Data/: AppDbContext.cs
backend-net/Migrations/: 20260613122541_InitialCreate.Designer.cs  20260613122541_InitialCreate.cs  AppDbContextModelSnapshot.cs
backend-net/Objects/Dtos/: AnalisaRequestDto.cs
backend-net/Objects/Models/: AnalisaRequestModel.cs
backend-net/Objects/ViewModels/: AnalisaRequestVM.cs
backend-net/Properties/: launchSettings.json
backend-net/Services/: AnalisaService.cs  RabbitMQPublisher.cs
scripts/: vps-deploy.sh
worker-python/: .gitignore  Dockerfile  daily_worker.py  main.py  requirements.txt
worker-python/core/: config.py
worker-python/services/: backend_api.py  sentiment_ai.py  technical_ai.py
